<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/select_ua_preset"
        android:textAppearance="?attr/textAppearanceCaption" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_ua_presets"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_spinner_dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_ua_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri|textMultiLine"
            android:maxLines="3"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_lock_user_agent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lock_user_agent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:text="@string/lock_user_agent_sum"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp" />

</LinearLayout>
